vlib/v/checker/tests/alias_type_cast_option_result_unhandled_err.vv
struct Abc {
	a string
}

type Alias = Abc

fn ret_abc_result() !Abc {
	return Abc{'a'}
}

fn ret_abc_option() ?Abc {
	return Abc{'a'}
}

a := Alias(ret_abc_result())
b := Alias(ret_abc_option())
println('${a}${b}')
